[gd_scene load_steps=8 format=3 uid="uid://cu3i1p3knb8dp"]

[ext_resource type="PackedScene" uid="uid://dvhjxcscbxat6" path="res://Scenes/Fuel/FuelContainer/FuelContainer.tscn" id="2_1j8pv"]
[ext_resource type="PackedScene" uid="uid://6qm43mvh3ma6" path="res://Scenes/Enemies/Enemy.tscn" id="2_6xet0"]
[ext_resource type="Script" path="res://Scripts/Enemies/WaveManager.gd" id="2_7hnn4"]
[ext_resource type="PackedScene" uid="uid://cicvcl7ecrmi7" path="res://Scenes/Enemies/EnemySpawner.tscn" id="2_kbano"]
[ext_resource type="PackedScene" uid="uid://7lfiufia8slp" path="res://Scenes/Player/Player.tscn" id="2_ko0f8"]
[ext_resource type="Script" path="res://Scripts/Enemies/StartWaveButton.gd" id="3_72yn0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lm2qt"]
radius = 270.0

[node name="World" type="Node2D"]

[node name="FuelContainer" parent="." node_paths=PackedStringArray("player") instance=ExtResource("2_1j8pv")]
player = NodePath("../Player")

[node name="PlayerDetector" type="Area2D" parent="FuelContainer"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FuelContainer/PlayerDetector"]
shape = SubResource("CircleShape2D_lm2qt")

[node name="Player" parent="." instance=ExtResource("2_ko0f8")]
position = Vector2(133, -99)

[node name="Control" type="Control" parent="Player"]
layout_mode = 3
anchors_preset = 0
offset_left = -449.0
offset_top = -648.0
offset_right = 455.0
offset_bottom = 698.0

[node name="WaveCounter" type="Label" parent="Player/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 100.0
offset_top = 129.0
offset_right = 147.0
offset_bottom = 155.0
text = "Wave: 0"

[node name="StartWave" type="Button" parent="Player/Control" node_paths=PackedStringArray("spawners", "fuel_container")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 366.0
offset_top = 65.0
offset_right = 458.0
offset_bottom = 96.0
text = "Start Wave"
script = ExtResource("3_72yn0")
spawners = NodePath("../../Spawners")
fuel_container = NodePath("../../../FuelContainer")

[node name="Spawners" type="Node2D" parent="Player"]
position = Vector2(-133, 99)
script = ExtResource("2_7hnn4")
enemies = Array[PackedScene]([ExtResource("2_6xet0")])

[node name="EnemySpawner" parent="Player/Spawners" node_paths=PackedStringArray("target") instance=ExtResource("2_kbano")]
position = Vector2(-1250, 0)
target = NodePath("../../../FuelContainer")

[node name="EnemySpawner2" parent="Player/Spawners" node_paths=PackedStringArray("target") instance=ExtResource("2_kbano")]
position = Vector2(1250, 0)
target = NodePath("../../../FuelContainer")

[connection signal="area_entered" from="FuelContainer/PlayerDetector" to="Player/Control/StartWave" method="_on_player_detector_area_entered"]
[connection signal="area_exited" from="FuelContainer/PlayerDetector" to="Player/Control/StartWave" method="_on_player_detector_area_exited"]
[connection signal="button_down" from="Player/Control/StartWave" to="Player/Control/StartWave" method="_on_button_down"]
